Fix responsive layout issues-3

--- a/styles/pageId.module.css
+++ b/styles/pageId.module.css
@@ -327,6 +327,21 @@
   }
 }
 
+@media (max-width: 750px) {
+}
+.title {
+  top: 55%;
+}
+/* @media (max-width: 745px) {
+}
+.title {
+  top: 55%;
+}
+@media (max-width: 720px) {
+}
+.title {
+  top: 60%;
+} */
 @media (max-width: 480px) {
   .title {
     top: 30%;
